--- a/classSchedule.html
+++ b/classSchedule.html
@@ -9,6 +9,9 @@
     .w3-tangerine {
       font-family: "Tangerine", serif;
     }
+   .w3-myfont {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
     .w3-bold {
       font-weight: bold;
     }
@@ -40,9 +43,9 @@
  <br> 
 
 <!-- body -->
-  <div class="w3-container">
+  <div class="w3-container w3-card-2 w3-myfont">
     <ul class="w3-ul w3-xlarge">
-      <li> <span class="w3-xxxlarge"> Arithmetic </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
       <li> L3: Multiplication I </li>
@@ -79,11 +82,6 @@
 <!-- the footer -->
   <div class="w3-container w3-panel w3-tangerine w3-row"> <!-- the footer -->
     <p class="w3-xxlarge w3-center"> &copy 2020 Poema Media </p>
-    <a href="https://www.mathjax.org">
-      <img title="Powered by MathJax"
-      src="https://www.mathjax.org/badge/badge.gif"
-      border="0" alt="Powered by MathJax" />
-    </a>
   </div>
 </div>
 </body>
