--- a/classSchedule.html
+++ b/classSchedule.html
@@ -43,8 +43,8 @@
  <br> 
 
 <!-- body -->
-  <div class="w3-container w3-card-2 w3-myfont">
-    <ul class="w3-ul w3-xlarge">
+  <div class="w3-container w3-myfont">
+    <ul class="w3-ul w3-large w3-card-2">
       <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
@@ -56,8 +56,8 @@
       <li> L8: Quiz </li>
     </ul>
 <br>
-    <ul class="w3-ul">
-      <li> <h2> Pre-algebra </h2> </li>
+    <ul class="w3-ul w3-large w3-card-2">
+      <li> <span class="w3-xxxlarge w3-tangerine"> Pre-algebra </span> </li>
       <li> L1: Integer addition & subtraction </li>
       <li> L2: Integer multiplication & division </li>
       <li> L3: Simple fraction addition & subtraction </li>
@@ -68,8 +68,8 @@
       <li> L8: Quiz </li>
     </ul>
 <br>
-    <ul class="w3-ul">
-      <li> <h2> Algebra </h2> </li>
+    <ul class="w3-ul w3-large w3-card-2">
+      <li> <span class="w3-xxxlarge w3-tangerine"> Algebra </span> </li>
       <li> L1: Integers </li>
       <li> L2: Rules of Algebra </li>
       <li> L3: Algebraic expressions & operations </li>
