--- a/classSchedule.html
+++ b/classSchedule.html
@@ -43,8 +43,8 @@
  <br> 
 
 <!-- body -->
-  <div class="w3-container w3-myfont">
-    <ul class="w3-ul w3-large w3-card-2">
+  <div class="w3-container w3-myfont w-row">
+    <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
       <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
@@ -56,7 +56,7 @@
       <li> L8: Quiz </li>
     </ul>
 <br>
-    <ul class="w3-ul w3-large w3-card-2">
+    <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
       <li> <span class="w3-xxxlarge w3-tangerine"> Pre-algebra </span> </li>
       <li> L1: Integer addition & subtraction </li>
       <li> L2: Integer multiplication & division </li>
@@ -68,7 +68,7 @@
       <li> L8: Quiz </li>
     </ul>
 <br>
-    <ul class="w3-ul w3-large w3-card-2">
+    <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
       <li> <span class="w3-xxxlarge w3-tangerine"> Algebra </span> </li>
       <li> L1: Integers </li>
       <li> L2: Rules of Algebra </li>
