--- a/classSchedule.html
+++ b/classSchedule.html
@@ -38,7 +38,7 @@
     </div>
 <!-- title -->    
     <div class="w3-center">
-      <p class="w3-jumbo w3-bold"> Class Schedule </p>
+      <p class="w3-jumbo w3-bold"> 2020 Summer School Class Schedule </p>
     </div>
  <br> 
 
