--- a/classSchedule.html
+++ b/classSchedule.html
@@ -50,7 +50,7 @@
       <li> L2: Double digit addition and subtraction </li>
       <li> L3: Multiplication I </li>
       <li> L4: Mutlitplication II </li>
-      <li> L5: Magic Nice </li>
+      <li> L5: Magic Nine </li>
       <li> L6: Division I </li>
       <li> L7: Division II </li>
       <li> L8: Quiz </li>
