--- a/classSchedule.html
+++ b/classSchedule.html
@@ -43,7 +43,7 @@
  <br> 
 
 <!-- body -->
-  <div class="w3-container w3-myfont w-row">
+  <div class="w3-container w3-myfont w-row-padding">
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
       <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic </span> </li>
       <li> L1: Single digit addition & subtraction </li>
