--- a/games.html
+++ b/games.html
@@ -22,7 +22,7 @@
       text-decoration: none;
       color: blue;
     }
-    .24Card {
+    .gameCard {
       width: 100px;
       height: 100px;
       font-size: 40px;
@@ -49,10 +49,10 @@
 
 <!-- body -->
   <div class="w3-container w3-myfont w-row-padding">
-    <div id="1stCard" class="24Card w3-third"> 4 </div>
-    <div id="2ndCard" class="24Card w3-third"> 5 </div>
-    <div id="3rdCard" class="24Card w3-third"> 6 </div>
-    <div id="4thCard" class="24Card w3-third"> 7 </div>
+    <div id="1stCard" class="gameCard w3-third w3-card"> 4 </div>
+    <div id="2ndCard" class="gameCard w3-third w3-card"> 5 </div>
+    <div id="3rdCard" class="gameCard w3-third w3-card"> 6 </div>
+    <div id="4thCard" class="gameCard w3-third w3-card"> 7 </div>
   </div>
 <!-- the footer -->
   <div class="w3-container w3-panel w3-tangerine w3-row"> <!-- the footer -->
