--- a/games.html
+++ b/games.html
@@ -23,9 +23,10 @@
       color: blue;
     }
     .gameCard {
-      width: 100px;
-      height: 100px;
-      font-size: 40px;
+      width: 200px;
+      height: 200px;
+      font-size: 100px;
+      text-align: center;
     }
   </style>
 </head>
