--- a/games.html
+++ b/games.html
@@ -27,6 +27,7 @@
       height: 200px;
       font-size: 100px;
       text-align: center;
+      vertical-align: middle;
     }
   </style>
 </head>
