--- a/games.html
+++ b/games.html
@@ -25,6 +25,7 @@
     .gameCard {
       width: 200px;
       height: 200px;
+      line-height: 200px;
       font-size: 100px;
       text-align: center;
       vertical-align: middle;
