--- a/games.html
+++ b/games.html
@@ -46,7 +46,7 @@
     </div>
 <!-- title -->    
     <div class="w3-center">
-      <p class="w3-jumbo w3-bold"> 2020 Summer School Class Schedule </p>
+      <p class="w3-jumbo w3-bold"> The Game of 24 </p>
     </div>
  <br> 
 
