--- a/games.html
+++ b/games.html
@@ -46,13 +46,16 @@
       <a href="https://pingnan.github.io/flashcards.html" class="w3-bar-item w3-button w3-hover-light-blue"> <span class="w3-xxlarge"> Flash Cards </span> </a>
     </div>
 <!-- title -->    
+
     <div class="w3-center">
       <p class="w3-jumbo w3-bold"> The Game of 24 </p>
+      <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> start </button>
     </div>
  <br> 
 
 <!-- body -->
-    <button> start </button>
+
+    
   <div class="w3-container w3-myfont w-row-padding">
     <div id="1stCard" class="gameCard w3-third w3-card"> 4 </div>
     <div id="2ndCard" class="gameCard w3-third w3-card"> 5 </div>
@@ -64,10 +67,14 @@
     <p class="w3-xxlarge w3-center"> &copy 2020 Poema Media </p>
   </div>
 </div>
+</div>
   <script>
   $(document).ready(function(){
     $("button").click(function(){
     $("#1stCard").text(Math.round(Math.random()*10+0.5));
+    $("#2ndCard").text(Math.round(Math.random()*10+0.5));
+    $("#3rdCard").text(Math.round(Math.random()*10+0.5));
+    $("#4thCard").text(Math.round(Math.random()*10+0.5));
       });
   });
   </script>
