--- a/games.html
+++ b/games.html
@@ -55,7 +55,7 @@
 
 <!-- body -->
     
-    <div class="w3-container w3-myfont w-row-padding">
+    <div class="w3-container w3-myfont w-row-padding w3-center">
       <div id="1stCard" class="gameCard w3-third w3-card"> 4 </div>
       <div id="2ndCard" class="gameCard w3-third w3-card"> 5 </div>
       <div id="3rdCard" class="gameCard w3-third w3-card"> 6 </div>
