--- a/games.html
+++ b/games.html
@@ -19,6 +19,10 @@
     body {
       background-color:lightblue;
     }
+    a.link {	
+      text-decoration: none;	
+      color: blue;	
+    }
     .gameCard {
       width: 200px;
       height: 200px;
