--- a/games.html
+++ b/games.html
@@ -50,7 +50,7 @@
   <div class="w3-center">
     <!-- title -->    
     <p class="w3-jumbo w3-bold"> The Game of 24 </p>
-    <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> press for next round </button>
+    <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
     <br> 
 
 <!-- body -->
