--- a/games.html
+++ b/games.html
@@ -71,7 +71,7 @@
   <script>
   $(document).ready(function(){
     $("button").click(function(){
-    $("#1stCard").text(Math.round(Math.random()*10+0.5));
+    $("#1stCard").text(Math.round(Math.random()*10+0.5)).fadeIn(3000);
     $("#2ndCard").text(Math.round(Math.random()*10+0.5));
     $("#3rdCard").text(Math.round(Math.random()*10+0.5));
     $("#4thCard").text(Math.round(Math.random()*10+0.5));
