--- a/classSchedule.html
+++ b/classSchedule.html
@@ -45,7 +45,7 @@
 <!-- body -->
   <div class="w3-container w3-myfont w-row-padding">
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
-      <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic: <span class="xxlarge"> Wednesday 3 pm </span> </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic: <span class="xlarge"> Wednesday 3 pm </span> </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
       <li> L3: Multiplication I </li>
