--- a/classSchedule.html
+++ b/classSchedule.html
@@ -45,7 +45,7 @@
 <!-- body -->
   <div class="w3-container w3-myfont w-row-padding">
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
-      <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic: <span class="xlarge"> Wednesday 3 pm </span> </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic: <span class="w3-xxlarge"> Wednesday 3 pm </span> </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
       <li> L3: Multiplication I </li>
@@ -57,7 +57,7 @@
     </ul>
 
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
-      <li> <span class="w3-xxxlarge w3-tangerine"> Pre-algebra: Monday 3 pm & Friday 3 pm </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Pre-algebra: <span class="w3-xxlarge"> Monday 3 pm & Friday 3 pm </span> </span> </li>
       <li> L1: Integer addition & subtraction </li>
       <li> L2: Integer multiplication & division </li>
       <li> L3: Simple fraction addition & subtraction </li>
@@ -69,7 +69,7 @@
     </ul>
     
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
-      <li> <span class="w3-xxxlarge w3-tangerine"> Algebra: Wednesday 2 pm </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Algebra: <span class="w3-xxlage"> Wednesday 2 pm </span> </span> </li>
       <li> L1: Integers </li>
       <li> L2: Rules of Algebra </li>
       <li> L3: Algebraic expressions & operations </li>
