--- a/classSchedule.html
+++ b/classSchedule.html
@@ -69,7 +69,7 @@
     </ul>
     
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
-      <li> <span class="w3-xxxlarge w3-tangerine"> Algebra: <span class="w3-xxlage"> Wednesday 2 pm </span> </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Algebra: <span class="w3-xxlarge"> Wednesday 2 pm </span> </span> </li>
       <li> L1: Integers </li>
       <li> L2: Rules of Algebra </li>
       <li> L3: Algebraic expressions & operations </li>
