--- a/classSchedule.html
+++ b/classSchedule.html
@@ -39,6 +39,7 @@
 <!-- title -->    
     <div class="w3-center">
       <p class="w3-jumbo w3-bold"> 2020 Summer School Class Schedule </p>
+      <p class="w3-xxxlarge"> June 1  to July 31 </p>
     </div>
  <br> 
 
@@ -57,7 +58,7 @@
     </ul>
 
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
-      <li> <span class="w3-xxxlarge w3-tangerine"> Pre-algebra: <span class="w3-xxlarge"> Monday 3 pm & Friday 3 pm </span> </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Pre-algebra: <span class="w3-xxlarge" style="white-space: nowrap;"> Monday 3 pm & Friday 3 pm </span> </span> </li>
       <li> L1: Integer addition & subtraction </li>
       <li> L2: Integer multiplication & division </li>
       <li> L3: Simple fraction addition & subtraction </li>
@@ -69,7 +70,7 @@
     </ul>
     
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-third">
-      <li> <span class="w3-xxxlarge w3-tangerine"> Algebra: <span class="w3-xxlarge"> Wednesday 2 pm </span> </span> </li>
+      <li> <span class="w3-xxxlarge w3-tangerine"> Algebra: <span class="w3-xxlarge" style="white-space: nowrap;"> Wednesday 2 pm </span> </span> </li>
       <li> L1: Integers </li>
       <li> L2: Rules of Algebra </li>
       <li> L3: Algebraic expressions & operations </li>
