--- a/classSchedule.html
+++ b/classSchedule.html
@@ -45,7 +45,7 @@
 
 <!-- body -->
   <div class="w3-container w3-myfont w-row">
-    <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-col m4 l3">
+    <ul class="w3-panel w3-ul w3-large w3-card-2 w3-hoverable w3-col m4 l3">
       <li> <span class="w3-xxxlarge w3-tangerine"> Arithmetic: <span class="w3-xxlarge" style="white-space: nowrap;"> Wednesday 3 pm </span> </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
@@ -56,7 +56,7 @@
       <li> L7: Division II </li>
       <li> L8: Quiz </li>
     </ul>
-
+    <ul class="w3-col s1 m1 l1"> </ul>
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-col m4 l3">
       <li> <span class="w3-xxxlarge w3-tangerine"> Pre-algebra: <span class="w3-xxlarge" style="white-space: nowrap;"> Monday 3 pm & Friday 3 pm </span> </span> </li>
       <li> L1: Integer addition & subtraction </li>
@@ -68,7 +68,7 @@
       <li> L7: Improper fractions & mixed numbers </li>
       <li> L8: Quiz </li>
     </ul>
-    
+    <ul class="w3-col s1 m1 l1"> </ul>    
     <ul class="w3-ul w3-large w3-card-2 w3-hoverable w3-col m4 l3">
       <li> <span class="w3-xxxlarge w3-tangerine"> Algebra: <span class="w3-xxlarge" style="white-space: nowrap;"> Thursday 2 pm </span> </span> </li>
       <li> L1: Integers </li>
