--- a/games.html
+++ b/games.html
@@ -58,9 +58,9 @@
     <div class="w3-container w3-myfont w-row-padding w3-center">
       <div id="1stCard" class="gameCard w3-panel w3-third w3-card w3-animate-top"> 4 </div>
       <div style="width: 10%;"> </div>
-      <div id="2ndCard" class="gameCard w3-panel w3-third w3-card"> 5 </div>
-      <div id="3rdCard" class="gameCard w3-panel w3-third w3-card"> 6 </div>
-      <div id="4thCard" class="gameCard w3-panel w3-third w3-card"> 7 </div>
+      <div id="2ndCard" class="gameCard w3-panel w3-third w3-card w3-animate-top"> 5 </div>
+      <div id="3rdCard" class="gameCard w3-panel w3-third w3-card w3-animate-top"> 6 </div>
+      <div id="4thCard" class="gameCard w3-panel w3-third w3-card w3-animate-top"> 7 </div>
     </div>
   </div>
 <!-- the footer -->
