--- a/games.html
+++ b/games.html
@@ -60,7 +60,7 @@
       <div style="width: 10%;"> </div>
       <div id="2ndCard" class="gameCard w3-panel w3-third w3-card w3-animate-left"> 5 </div>
       <div id="3rdCard" class="gameCard w3-panel w3-third w3-card w3-animate-bottom"> 6 </div>
-      <div id="4thCard" class="gameCard w3-panel w3-third w3-card w3-animate-top"> 7 </div>
+      <div id="4thCard" class="gameCard w3-panel w3-third w3-card w3-animate-right"> 7 </div>
     </div>
   </div>
 <!-- the footer -->
