--- a/games.html
+++ b/games.html
@@ -72,7 +72,7 @@
   <script>
   $(document).ready(function(){
     $("button").click(function(){
-      $("#1stCard").text(Math.round(Math.random()*10+0.5)).hide();
+      $("#1stCard").text(Math.round(Math.random()*10+0.5));
       $("#2ndCard").text(Math.round(Math.random()*10+0.5));
       $("#3rdCard").text(Math.round(Math.random()*10+0.5));
       $("#4thCard").text(Math.round(Math.random()*10+0.5));
