--- a/games.html
+++ b/games.html
@@ -56,10 +56,10 @@
 <!-- body -->
     
     <div class="w3-container w3-myfont w-row w3-center">
-      <div id="1stCard" class="gameCard w3-panel w3-card w3-animate-top"> 4 </div>
-      <div id="2ndCard" class="gameCard w3-panel w3-card w3-animate-left"> 5 </div>
-      <div id="3rdCard" class="gameCard w3-panel w3-card w3-animate-bottom"> 6 </div>
-      <div id="4thCard" class="gameCard w3-panel w3-card w3-animate-right"> 7 </div>
+      <div id="1stCard" class="gameCard w3-card w3-animate-top"> 4 </div>
+      <div id="2ndCard" class="gameCard w3-card w3-animate-left"> 5 </div>
+      <div id="3rdCard" class="gameCard w3-card w3-animate-bottom"> 6 </div>
+      <div id="4thCard" class="gameCard w3-card w3-animate-right"> 7 </div>
     </div>
   </div>
 <!-- the footer -->
