--- a/games.html
+++ b/games.html
@@ -24,7 +24,7 @@
       color: blue;	
     }
     .gameCard {
-      width: 20%;
+      width: 200px;
       height: 200px;
       line-height: 200px;
       font-size: 100px;
