--- a/games.html
+++ b/games.html
@@ -47,7 +47,7 @@
     </div>
 
 
-  <div class="w3-center">
+  <div class="w3-center w3-card">
     <!-- title -->    
     <p class="w3-jumbo w3-bold"> The Game of 24 </p>
     <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
