--- a/games.html
+++ b/games.html
@@ -51,17 +51,22 @@
     <!-- title -->    
     <p class="w3-jumbo w3-bold"> The Game of 24 </p>
     <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
-    <br> 
+    <br> <br>
 
 <!-- body -->
     
-    <div class="w3-container w3-myfont w-row w3-center">
-      <div id="1stCard" class="gameCard w3-card w3-animate-top"> 4 </div>
-      <div id="2ndCard" class="gameCard w3-card w3-animate-left"> 5 </div>
-      <div id="3rdCard" class="gameCard w3-card w3-animate-bottom"> 6 </div>
-      <div id="4thCard" class="gameCard w3-card w3-animate-right"> 7 </div>
+    <div class="w3-container w3-myfont w3-row w3-center">
+      <div id="1stCard" class="gameCard w3-card w3-animate-top w3-cell"> 4 </div>
+      <div style="width: 20px;" class="w3-cell"> </div>
+      <div id="2ndCard" class="gameCard w3-card w3-animate-left w3-cell"> 5 </div>
+      <div style="width: 20px;" class="w3-cell"> </div>
+      <div id="3rdCard" class="gameCard w3-card w3-animate-bottom w3-cell"> 6 </div>
+      <div style="width: 20px;" class="w3-cell"> </div>
+      <div id="4thCard" class="gameCard w3-card w3-animate-right w3-cell"> 7 </div>
     </div>
+   <br> <br>   
   </div>
+
 <!-- the footer -->
   <div class="w3-container w3-panel w3-tangerine w3-row"> <!-- the footer -->
     <p class="w3-xxlarge w3-center"> &copy 2020 Poema Media </p>
