--- a/arithmetic/index.html
+++ b/arithmetic/index.html
@@ -3,28 +3,31 @@
 <head>
 <title>Arithmetic</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-<style>
-.w3-tangerine {
-  font-family: "Tangerine", serif;
-}
-  h1 {font-size: 32px;}
-</style>
-    
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
+  
 <body>
-<div class="w3-container w3-tangerine">
-<h1> Introduction </h1>
-<h1> Chapter I: Addition </h1>
-<h1> Chapter II: Subtraction </h1>
-<h1> Chapter III: Multiplication </h1>
-<h1> Chapter IV: Division </h1>
-<h1> Chapter V: Order of Operation </h1>
-<h1> Chapter VI: Mental Math </h1>
-<h1> Chapter VII: Number Sense </h1>
-<h1> Chapter VIII: Fun Problems </h1>
-<h1> Chapter IX: Go Beyond </h1>
+<div class="container">
+  <ul class="list-group">
+    <li class="list-group-item">Introduction</li>
+    <li class="list-group-item">Chapter I: Addition</li>
+    <li class="list-group-item">Chapter II: Subtraction</li>
+    <li class="list-group-item">Chapter III: Multiplication</li>
+    <li class="list-group-item">Chapter IV: Division</li>
+    <li class="list-group-item">Chapter V: Order of Operation</li>
+    <li class="list-group-item">Chapter VI: Mental Math</li>
+    <li class="list-group-item">Chapter VII: Number Sense </li>
+    <li class="list-group-item">Chapter VIII: Fun Problems</li>
+    <li class="list-group-item">Chapter IX: Go Beyond</li>
+  </ul>
 </div>
 </body>
 </html>
