--- a/arithmetic/index.html
+++ b/arithmetic/index.html
@@ -16,6 +16,7 @@
   
 <body>
 <div class="container">
+  <h1> Arithmetic </h1>
   <ul class="list-group">
     <li class="list-group-item">Introduction</li>
     <li class="list-group-item">Chapter I: Addition</li>
