--- a/arithmetic/index.html
+++ b/arithmetic/index.html
@@ -15,8 +15,8 @@
 </head>
   
 <body>
-<div class="container">
-  <h1> Arithmetic </h1>
+<div class="container card">
+  <h1 class="text-center"> Arithmetic </h1>
   <ul class="list-group">
     <li class="list-group-item">Introduction</li>
     <li class="list-group-item">Chapter I: Addition</li>
@@ -29,6 +29,7 @@
     <li class="list-group-item">Chapter VIII: Fun Problems</li>
     <li class="list-group-item">Chapter IX: Go Beyond</li>
   </ul>
+  <br>
 </div>
 </body>
 </html>
