--- a/pre-algebra/index.html
+++ b/pre-algebra/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Arithmetic</title>
+<title>Pre-algebra</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 <!-- Latest compiled and minified CSS -->
