--- a/algebra/index.html
+++ b/algebra/index.html
@@ -12,10 +12,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  .my-tangerine {
+    font-family: "Tangerine", serif;
+  }
 </head>
   
 <body>
-<div class="container card">
+<div class="container card my-tangerine">
   <h1 class="text-center"> Algebra </h1>
   <ul class="list-group">
     <li class="list-group-item"> Introduction </li>
