--- a/algebra/index.html
+++ b/algebra/index.html
@@ -12,25 +12,42 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<style>
   .my-tangerine {
     font-family: "Tangerine", serif;
   }
+  .my-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
+  .my-large {
+    font-size: 24px;
+  }
+  body {
+    background-color: lightblue;
+  }
+  .my-background-lightblue {
+    background-color: lightblue;
+  }
+  ul, li {
+    background-color: lightblue;
+    }
+</style>
 </head>
   
 <body>
-<div class="container card my-tangerine">
-  <h1 class="text-center"> Algebra </h1>
-  <ul class="list-group">
-    <li class="list-group-item"> Introduction </li>
-    <li class="list-group-item"> Chapter I: Rules of Algebra</li>
-    <li class="list-group-item"> Chapter II: Number families </li>
-    <li class="list-group-item"> Chapter III: Linear Equations </li>
-    <li class="list-group-item"> Chapter IV: Quadratic Equations </li>
-    <li class="list-group-item"> Chapter V: Linear Functions </li>
-    <li class="list-group-item"> Chapter VI: Quadratic Functions </li>
-    <li class="list-group-item"> Chapter VII: Polynomial Functions </li>
-    <li class="list-group-item"> Chapter VIII: Fun Problems </li>
-    <li class="list-group-item"> Chapter IX: Go Beyond </li>
+<div class="container card my-tangerine my-background-lightblue">
+  <h1 class="text-center display-1"> Algebra </h1>
+  <ul class="list-group my-comic my-large">
+    <li class="list-group-item my-background-lightblue"> Introduction </li>
+    <li class="list-group-item my-background-lightblue"> Chapter I: Rules of Algebra</li>
+    <li class="list-group-item my-background-lightblue"> Chapter II: Number families </li>
+    <li class="list-group-item my-background-lightblue"> Chapter III: Linear Equations </li>
+    <li class="list-group-item my-background-lightblue"> Chapter IV: Quadratic Equations </li>
+    <li class="list-group-item my-background-lightblue"> Chapter V: Linear Functions </li>
+    <li class="list-group-item my-background-lightblue"> Chapter VI: Quadratic Functions </li>
+    <li class="list-group-item my-background-lightblue"> Chapter VII: Polynomial Functions </li>
+    <li class="list-group-item my-background-lightblue"> Chapter VIII: Fun Problems </li>
+    <li class="list-group-item my-background-lightblue"> Chapter IX: Go Beyond </li>
   </ul>
   <br>
 </div>
