--- a/games.html
+++ b/games.html
@@ -55,7 +55,7 @@
 
 <!-- body -->
     
-    <div class="w3-container w3-myfont w3-row w3-center">
+    <div class="w3-container w3-myfont w3-row w3-center justify-content-center">
       <div id="1stCard" class="gameCard w3-card w3-animate-top w3-cell"> 4 </div>
       <div style="width: 20px;" class="w3-cell"> </div>
       <div id="2ndCard" class="gameCard w3-card w3-animate-left w3-cell"> 5 </div>
