--- a/games.html
+++ b/games.html
@@ -57,11 +57,15 @@
   <div class="w3-container w3-center w3-card">
     <!-- title -->    
     <p class="w3-jumbo w3-bold"> The Game of 24 </p>
-    <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
-    <br> <br>
+
 
 <!-- body -->
-    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ypP_rXIA6mQ" frameborder="0" 
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+    <br>    
+    <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
+    <br>
     <div class="flex-container w3-container w3-myfont w3-row justify-content-center">
       <div id="1stCard" class="gameCard w3-card w3-animate-top w3-cell"> 4 </div>
       <div id="2ndCard" class="gameCard w3-card w3-animate-left w3-cell"> 5 </div>
