--- a/games.html
+++ b/games.html
@@ -57,6 +57,10 @@
   <div class="w3-container w3-center w3-card">
     <!-- title -->    
     <p class="w3-jumbo w3-bold"> The Game of 24 </p>
+    <p class="w3-xxlarge"> 24 is a great math game to help elementary and middle school students develop problem-solving skills. 
+      I also use it as a warm-up before I teach or tutor my students. You have to use all the numbers once with addition, subtraction,
+      multiplication, and division and make the final result to be 24. 
+    </p>
 
 
 <!-- body -->
