--- a/games.html
+++ b/games.html
@@ -68,9 +68,9 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
     <br>    
-    <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
     <br>
-    <div class="flex-container w3-container w3-myfont w3-row justify-content-center">
+    <div class="flex-container w3-container w3-myfont w3-row justify-content-center w3-card">
+      <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
       <div id="1stCard" class="gameCard w3-card w3-animate-top w3-cell"> 4 </div>
       <div id="2ndCard" class="gameCard w3-card w3-animate-left w3-cell"> 5 </div>
       <div id="3rdCard" class="gameCard w3-card w3-animate-bottom w3-cell"> 6 </div>
