--- a/games.html
+++ b/games.html
@@ -57,24 +57,29 @@
   <div class="w3-container w3-center w3-card">
     <!-- title -->    
     <p class="w3-jumbo w3-bold"> The Game of 24 </p>
+    
+
+
+<!-- body -->
+    <div class="w3-container w3-card">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ypP_rXIA6mQ" frameborder="0" 
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
     <p class="w3-xxlarge"> 24 is a great math game to help elementary and middle school students develop problem-solving skills. 
       I also use it as a warm-up before I teach or tutor my students. You have to use all the numbers once with addition, subtraction,
       multiplication, and division and make the final result to be 24. 
     </p>
-
-
-<!-- body -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ypP_rXIA6mQ" frameborder="0" 
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
+    </div>
     <br>    
     <br>
-    <div class="flex-container w3-container w3-myfont w3-row justify-content-center w3-card">
+    <div class="w3-card"> 
       <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
-      <div id="1stCard" class="gameCard w3-card w3-animate-top w3-cell"> 4 </div>
-      <div id="2ndCard" class="gameCard w3-card w3-animate-left w3-cell"> 5 </div>
-      <div id="3rdCard" class="gameCard w3-card w3-animate-bottom w3-cell"> 6 </div>
-      <div id="4thCard" class="gameCard w3-card w3-animate-right w3-cell"> 7 </div>
+      <div class="flex-container w3-container w3-myfont w3-row">
+        <div id="1stCard" class="gameCard w3-card w3-animate-top w3-cell"> 4 </div>
+        <div id="2ndCard" class="gameCard w3-card w3-animate-left w3-cell"> 5 </div>
+        <div id="3rdCard" class="gameCard w3-card w3-animate-bottom w3-cell"> 6 </div>
+        <div id="4thCard" class="gameCard w3-card w3-animate-right w3-cell"> 7 </div>
+      </div>
     </div>
    <br> <br>   
   </div>
