--- a/games.html
+++ b/games.html
@@ -65,7 +65,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ypP_rXIA6mQ" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
-    <p class="w3-xxlarge"> 24 is a great math game to help elementary and middle school students develop problem-solving skills. 
+    <p class="w3-xxlarge w3-myfont"> 24 is a great math game to help elementary and middle school students develop problem-solving skills. 
       I also use it as a warm-up before I teach or tutor my students. You have to use all the numbers once with addition, subtraction,
       multiplication, and division and make the final result to be 24. 
     </p>
