--- a/games.html
+++ b/games.html
@@ -54,7 +54,7 @@
     </div>
 
 
-  <div class="w3-container w3-center w3-card">
+  <div class="w3-container w3-center">
     <!-- title -->    
     <p class="w3-jumbo w3-bold"> The Game of 24 </p>
     
@@ -62,17 +62,19 @@
 
 <!-- body -->
     <div class="w3-container w3-card">
+    <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ypP_rXIA6mQ" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
-    <p class="w3-xxlarge w3-myfont"> 24 is a great math game to help elementary and middle school students develop problem-solving skills. 
+    <p class="w3-large w3-myfont"> 24 is a great math game to help elementary and middle school students develop problem-solving skills. 
       I also use it as a warm-up before I teach or tutor my students. You have to use all the numbers once with addition, subtraction,
       multiplication, and division and make the final result to be 24. 
     </p>
     </div>
     <br>    
     <br>
-    <div class="w3-card"> 
+    <div class="w3-card">
+      <br>
       <button class="w3-xxlarge w3-blue w3-hover-purple w3-round-xlarge"> &nbsp press for next round &nbsp </button>
       <div class="flex-container w3-container w3-myfont w3-row">
         <div id="1stCard" class="gameCard w3-card w3-animate-top w3-cell"> 4 </div>
@@ -80,6 +82,7 @@
         <div id="3rdCard" class="gameCard w3-card w3-animate-bottom w3-cell"> 6 </div>
         <div id="4thCard" class="gameCard w3-card w3-animate-right w3-cell"> 7 </div>
       </div>
+      <br>
     </div>
    <br> <br>   
   </div>
