--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Class Schedule</title>
+  <title>24</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine"> 
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -37,6 +37,9 @@
       font-size: 100px;
       text-align: center;
       vertical-align: middle;
+    }
+    button {
+      outline: none;
     }
   </style>
 </head>
