--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <div class="w3-center">
       <p class="w3-jumbo w3-bold"> Poema Academy </p>
-      <p class="w3-xxxlarge"> Classical Math Education for Every God's Child </p>
+      <p class="w3-xxxlarge"> Free Classical Math Education for Every Child </p>
     </div>
  <br> 
     <div class="w3-row w3-center">
