--- a/pre-algebra/index.html
+++ b/pre-algebra/index.html
@@ -12,22 +12,44 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<style>
+.my-tangerine {
+  font-family: "Tangerine", serif;
+}
+.my-comic {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
+li {
+  font-size: 24px;
+}
+body{
+  background-color: lightblue;
+}
+.container {
+  background-color: lightblue;
+}
+.list-group-item {
+  background-color: lightblue;
+}
+
+</style>
 </head>
-  
+
 <body>
-<div class="container card">
-  <h1 class="text-center"> Pre-algebra </h1>
-  <ul class="list-group">
-    <li class="list-group-item"> Introduction </li>
-    <li class="list-group-item"> Chapter I: Integers and the number line</li>
-    <li class="list-group-item"> Chapter II: Fractions </li>
-    <li class="list-group-item"> Chapter III: Decimals </li>
-    <li class="list-group-item"> Chapter IV: Ratios, Rates & Proportions</li>
-    <li class="list-group-item"> Chapter V: Percents & Interests</li>
-    <li class="list-group-item"> Chapter VI: Equations & Expressions </li>
-    <li class="list-group-item"> Chapter VII: Measurements </li>
-    <li class="list-group-item"> Chapter VIII: Fun Problems </li>
-    <li class="list-group-item"> Chapter IX: Go Beyond </li>
+<div class="container card my-tangerine">
+  <h1 class="text-center display-1 text-primary"> Pre-algebra </h1>
+  <ul class="card-4 list-group my-comic shadow">
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Introduction </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter I: Integers and the number line</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter II: Fractions </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter III: Decimals </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter IV: Ratios, Rates & Proportions</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter V: Percents & Interests</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter VI: Equations & Expressions </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter VII: Measurements </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter VIII: Fun Problems </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter IX: Go Beyond </li>
   </ul>
   <br>
 </div>
