--- a/algebra/index.html
+++ b/algebra/index.html
@@ -19,22 +19,22 @@
   .my-comic {
     font-family: "Comic Sans MS", cursive, sans-serif;
     }
-  .my-large {
+  li {
     font-size: 24px;
   }
   body {
     background-color: lightblue;
   }
-  .my-background-lightblue {
+  .container, .list-group-item {
     background-color: lightblue;
   }
 </style>
 </head>
   
 <body>
-<div class="container card my-tangerine my-background-lightblue">
-  <h1 class="text-center display-1"> Algebra </h1>
-  <ul class="list-group my-comic my-large">
+<div class="container card my-tangerine">
+  <h1 class="text-center display-1 text-primary"> Algebra </h1>
+  <ul class="card-4 list-group my-comic">
     <li class="list-group-item my-background-lightblue"> Introduction </li>
     <li class="list-group-item my-background-lightblue"> Chapter I: Rules of Algebra</li>
     <li class="list-group-item my-background-lightblue"> Chapter II: Number families </li>
