--- a/algebra/index.html
+++ b/algebra/index.html
@@ -34,17 +34,17 @@
 <body>
 <div class="container card my-tangerine">
   <h1 class="text-center display-1 text-primary"> Algebra </h1>
-  <ul class="card-4 list-group my-comic">
-    <li class="list-group-item my-background-lightblue"> Introduction </li>
-    <li class="list-group-item my-background-lightblue"> Chapter I: Rules of Algebra</li>
-    <li class="list-group-item my-background-lightblue"> Chapter II: Number families </li>
-    <li class="list-group-item my-background-lightblue"> Chapter III: Linear Equations </li>
-    <li class="list-group-item my-background-lightblue"> Chapter IV: Quadratic Equations </li>
-    <li class="list-group-item my-background-lightblue"> Chapter V: Linear Functions </li>
-    <li class="list-group-item my-background-lightblue"> Chapter VI: Quadratic Functions </li>
-    <li class="list-group-item my-background-lightblue"> Chapter VII: Polynomial Functions </li>
-    <li class="list-group-item my-background-lightblue"> Chapter VIII: Fun Problems </li>
-    <li class="list-group-item my-background-lightblue"> Chapter IX: Go Beyond </li>
+  <ul class="card-4 list-group my-comic shadow">
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Introduction </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter I: Rules of Algebra</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter II: Number families </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter III: Linear Equations </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter IV: Quadratic Equations </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter V: Linear Functions </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter VI: Quadratic Functions </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter VII: Polynomial Functions </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter VIII: Fun Problems </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter IX: Go Beyond </li>
   </ul>
   <br>
 </div>
