--- a/arithmetic/index.html
+++ b/arithmetic/index.html
@@ -12,22 +12,39 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<style>
+  .my-tangerine {
+    font-family: "Tangerine", serif;
+  }
+  .my-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
+  li {
+    font-size: 24px;
+  }
+  body {
+    background-color: lightblue;
+  }
+  .container, .list-group-item {
+    background-color: lightblue;
+  }
+</style>
 </head>
   
 <body>
-<div class="container card">
-  <h1 class="text-center"> Arithmetic </h1>
-  <ul class="list-group">
-    <li class="list-group-item">Introduction</li>
-    <li class="list-group-item">Chapter I: Addition</li>
-    <li class="list-group-item">Chapter II: Subtraction</li>
-    <li class="list-group-item">Chapter III: Multiplication</li>
-    <li class="list-group-item">Chapter IV: Division</li>
-    <li class="list-group-item">Chapter V: Order of Operation</li>
-    <li class="list-group-item">Chapter VI: Mental Math</li>
-    <li class="list-group-item">Chapter VII: Number Sense </li>
-    <li class="list-group-item">Chapter VIII: Fun Problems</li>
-    <li class="list-group-item">Chapter IX: Go Beyond</li>
+<div class="container card my-tangerine">
+  <h1 class="text-center display-1 text-primary"> Arithmetic </h1>
+  <ul class="card-4 list-group my-comic shadow">
+    <li class="list-group-item list-group-item-action list-group-item-primary">Introduction</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter I: Addition</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter II: Subtraction</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter III: Multiplication</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter IV: Division</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter V: Order of Operation</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter VI: Mental Math</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter VII: Number Sense </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter VIII: Fun Problems</li>
+    <li class="list-group-item list-group-item-action list-group-item-primary">Chapter IX: Go Beyond</li>
   </ul>
   <br>
 </div>
