--- a/pre-algebra/index.html
+++ b/pre-algebra/index.html
@@ -42,7 +42,7 @@ body{
   <ul class="card-4 list-group my-comic shadow">
     <li class="list-group-item list-group-item-action list-group-item-primary"> Introduction </li>
     <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter I: Integers and the number line</li>
-    <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter II: Fractions </li>
+    <li class="list-group-item list-group-item-action list-group-item-primary"> <a href="chapter2/index.html">Chapter II: Fractions </a></li>
     <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter III: Decimals </li>
     <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter IV: Ratios, Rates & Proportions</li>
     <li class="list-group-item list-group-item-action list-group-item-primary"> Chapter V: Percents & Interests</li>
