--- a/flashcards.html
+++ b/flashcards.html
@@ -40,21 +40,23 @@
 <div class="row justify-content-center">
   <!-- first card  -->
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="https://pingnan.github.io/arithmetic/panda.jpg" alt="arithmetic flash cards" style="width:100%">
+    <img src="img/panda.jpg" alt="arithmetic flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Arithmetic </p>
     </div>
   </div>
   <!-- second card  -->    
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="https://pingnan.github.io/pre-algebra/huski.jpg" alt="Pre-algebra flash cards" style="width:100%">
+    <a href="pre-algebra/pre-algebraFlashCards.html"> 
+      <img src="img/huski.jpg" alt="Pre-algebra flash cards" style="width:100%">
+    </a>
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Pre-algebra </p>
     </div>
   </div>
   <!-- third card  -->      
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="https://pingnan.github.io/algebra/flyingEagle.jpg" alt="algebra flash cards" style="width:100%">
+    <img src="img/flyingEagle.jpg" alt="algebra flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Algebra </p>
     </div>                          
@@ -64,21 +66,21 @@
 <div class="row justify-content-center">
   <!-- fourth card  -->                           
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="https://pingnan.github.io/geometry/snail.jpg" alt="geometry flash cards" style="width:100%">
+    <img src="img/snail.jpg" alt="geometry flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Geometry </p>
     </div>
   </div>
   <!-- fifth card  -->      
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="https://pingnan.github.io/pre-calculus/functions.jpg" alt="pre-calculus flash cards" style="width:100%">
+    <img src="img/functions.jpg" alt="pre-calculus flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Pre-calculus </p>
     </div>
   </div>
   <!-- six card  -->              
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="https://pingnan.github.io/calculus/spaceShuttle.jpg" alt="calculus flash cards" style="width:100%">
+    <img src="img/spaceShuttle.jpg" alt="calculus flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Calculus </p>
     </div>                          
