--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
 <body>
   <!-- Navbar -->
-  <div class="card shadow ps-bg-lightblue mx-4">
+  <div class="card shadow ps-bg-lightblue mx-4 d-flex">
   <nav class="navbar navbar-expand-sm">
     <ul class="navbar-nav ps-tangerine ps-sm">
       <li class="nav-item">
@@ -30,7 +30,10 @@
         <a href="webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
       </li>
       <li class="nav-item">
-        <a href="flashcards.html" class="nav-link ps-blue">Flash Cards</a>
+        <a href="flashcards.html" class="nav-link ps-blue">Flashcards</a>
+      </li>
+      <li class="nav-item ">
+        <a href="#" class="nav-link ps-blue">About</a>
       </li>
     </ul>
   </nav>
