add links for Web Textbooks

--- a/webTextbooks.html
+++ b/webTextbooks.html
@@ -29,7 +29,7 @@
         <a href="webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
       </li>
       <li class="nav-item">
-        <a href="flashcards.html" class="nav-link ps-blue">Flash Cards</a>
+        <a href="flashcards.html" class="nav-link ps-blue">Flashcards</a>
       </li>
     </ul>
   </nav>
@@ -39,46 +39,58 @@
 <h1> Free Web Textbooks </h1>
 <!-- first row -->
   <div class="row justify-content-center">
-    <!-- first card -->
+    <!-- first textbook -->
     <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+      <a href="arithmetic/index.html"> 
         <img src="img/panda.jpg" alt="free arithmetic textbook" style="width:100%">
+      </a>
         <div class="card-body">
           <p class="ps-tangerine ps-md"> Arithmetic </p>
         </div>
     </div>
-   <!-- second card --> 
-    <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+   <!-- second textbook --> 
+    <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px"> 
+      <a href="pre-algebra/index.html"> 
         <img src="img/huski.jpg" alt="free pre-algebra textbook" style="width:100%">
+      </a>
         <div class="card-body">
           <p class="ps-tangerine ps-md"> Pre-algebra </p>
          </div>
     </div>    
-    <!-- third card -->
+    <!-- third textbook -->
     <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-         <img src="img/flyingEagle.jpg" alt="free algebra textbook" style="width:100%">
-         <div class="card-body">
-           <p class="ps-tangerine ps-md"> Algebra </p>
-         </div>
+      <a href="algebra/index.html">
+        <img src="img/flyingEagle.jpg" alt="free algebra textbook" style="width:100%">
+      </a>
+      <div class="card-body">
+        <p class="ps-tangerine ps-md"> Algebra </p>
+      </div>
         </div>
 <!-- second row -->
     <div class="row justify-content-center my-4">
-      <!-- fourth card -->
+      <!-- fourth textbook -->
       <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+      <a href="geometry/index.html">
         <img src="img/snail.jpg" alt="free geometry textbook" style="width:100%">
+      </a>
         <div class="card-body">
           <p class="ps-tangerine ps-md"> Geometry </p>
         </div>
        </div>
-      <!-- fifth card -->
+      <!-- fifth textbook -->
       <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-        <img src="img/functions.jpg" alt="free pre-calculus textbook" style="width:100%">
+        <a href="pre-calculus/index.html">
+          <img src="img/functions.jpg" alt="free pre-calculus textbook" style="width:100%">
+        </a>
         <div class="card-body">
           <p class="ps-tangerine ps-md"> Pre-calculus </p>
          </div>
         </div>    
-      <!-- sixth card -->
+      <!-- sixth textbook -->
       <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+        <a href="calculus/index.html">
          <img src="img/spaceShuttle.jpg" alt="free calculus textbook" style="width:100%">
+        </a>
          <div class="card-body">
            <p class="ps-tangerine ps-md"> Calculus </p>
          </div>                          
