made navbar sticky

--- a/flashcards.html
+++ b/flashcards.html
@@ -16,7 +16,7 @@
   
 <body>
 <!-- Navbar -->
-<div class="card shadow ps-bg-lightblue mx-4">
+<div class="sticky card shadow ps-bg-lightblue mx-4">
   <nav class="navbar navbar-expand-sm">
     <ul class="navbar-nav ps-tangerine ps-sm">
       <li class="nav-item">
