--- a/onlineClasses.html
+++ b/onlineClasses.html
@@ -16,7 +16,7 @@
 <body>
 
 <!-- Navbar -->
-<div class="card shadow ps-bg-lightblue mx-4">
+<div class="sticky card shadow ps-bg-lightblue mx-4">
   <nav class="navbar navbar-expand-sm">
     <ul class="navbar-nav ps-tangerine ps-sm">
       <li class="nav-item">
@@ -29,7 +29,7 @@
         <a href="webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
       </li>
       <li class="nav-item">
-        <a href="flashcards.html" class="nav-link ps-blue">Flash Cards</a>
+        <a href="flashcards.html" class="nav-link ps-blue">Flashcards</a>
       </li>
     </ul>
   </nav>
@@ -44,6 +44,9 @@
     <img src="img/panda.jpg" alt="arithmetic class" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Arithmetic </p>
+      <p class="ps-sm ps-tangerine">
+        Wednesday 3 pm
+      </p>
     </div>
   </div>
   <!-- second card -->
@@ -51,6 +54,10 @@
     <img src="img/huski.jpg" alt="pre-algebra class" style="width:100%">
   <div class="card-body">
     <p class="ps-tangerine ps-md"> Pre-algebra </p>
+    <p class="ps-sm ps-tangerine">
+      Monday 1 pm & 3 pm <br>
+      Friday 1 pm & 3 pm
+    </p>
     </div>
   </div> 
   <!-- third card -->
@@ -58,10 +65,18 @@
     <img src="img/flyingEagle.jpg" alt="algebra class" style="width:100%">
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Algebra </p>
+        <p class="ps-sm ps-tangerine">
+          Monday 2 pm <br>
+          Friday 2 pm
+        </p>
       </div>                          
   </div>
-  
-</div> 
 </div>
+<!-- Contact Us  -->
+<div class="row justify-content-center">
+  <div>
+    <a class="btn btn-primary ps-tangerine ps-sm my-5" style="color:white;" href="mailto:pingnan.shi@gmail.com">Email Dr. Ping</a>
+  </div>
+</div> 
 </body>
 </html>
