--- a/flashcards.html
+++ b/flashcards.html
@@ -63,7 +63,7 @@
   </div>
 </div>
 <!-- second row -->
-<div class="row justify-content-center">
+<div class="row justify-content-center my-4">
   <!-- fourth card  -->                           
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="img/snail.jpg" alt="geometry flash cards" style="width:100%">
@@ -86,6 +86,12 @@
     </div>                          
   </div>
 </div>
+  <!-- Contact Us  -->
+<div class="row justify-content-center">
+  <div>
+    <a class="btn btn-primary ps-tangerine ps-sm my-5" style="color:white;" href="mailto:pingnan.shi@gmail.com">Email Dr. Ping</a>
+  </div>
+</div> 
 <!-- footer -->
 </body>
 </html>
