add poema academy

--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
       </li>
     </ul>
   </nav>
-</div>
+  </div>
     
-  <h1> Poema Academy </h1>
+  <h1> Poema Institute </h1>
   <h2> Free Classical Math Education for Every Child </h2>
-  <br><br>
-
-  <div class="row justify-content-center">   
+  <div class="row justify-content-center"> 
   <!-- first card -->
     <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
       <a href="https://pingnan.github.io/onlineClasses.html"> <img class="card-img-top" src="onlineClasses-profile.jpg" alt="online classes" style="width:100%"> </a>
@@ -66,6 +64,17 @@
         </div>
     </div>                          
   </div>
+  <br><br>
+  <h2> Education For Future Entrepreneurs </h2>
+  <div class="row justify-content-center">
+  <!-- fourth card -->      
+    <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+      <a href="poema-academy/index.html"> <img src="img/woodworking.jpg" alt="Flash Cards" style="width:100%"> </a>
+      <div class="card-body">
+        <p class="ps-tangerine ps-md"> Poema Academy </p>
+      </div>
+    </div>
+  </div>                     
   <!-- Contact Us  -->
   <div class="row justify-content-center">
     <div>
