add intro to poema academy

--- a/poema-academy/index.html
+++ b/poema-academy/index.html
@@ -47,6 +47,18 @@
   <p>
       Poema academy provides a brand new kind of education which is designed for the new economy and global marketplace. It is a two year high school where students are trained to become entrepreneurs. Graduates have the options of going to a college prep program, a trade school, or start a business.
   </p>
+  <p>
+      The curriculum consists of four subjects:
+      <ul>
+          <li>Biblical Entrepreneurship</li>
+          <li>Practical Math</li>
+          <li>Practical English</li>
+          <li>Computer Technology</li>
+      </ul>
+  </p>
+  <p>
+      Students will spend half day learning in school and half day work in different businesses with the objective of running a business.
+  </p>
 
 </div>
 
