--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <a href="flashcards.html" class="nav-link ps-blue">Flashcards</a>
       </li>
       <li class="nav-item ">
+        <a href="/poema-academy/index.html" class="nav-link ps-blue">Poema Academy</a>
+      </li>
+      <li class="nav-item ">
         <a href="#" class="nav-link ps-blue">About</a>
       </li>
     </ul>
